RESOLVED FIXED 117588
[CSS Blending] SVG background images don't blend with any other layer
https://bugs.webkit.org/show_bug.cgi?id=117588
Summary [CSS Blending] SVG background images don't blend with any other layer
Mirela
Reported 2013-06-13 05:24:30 PDT
No blend operation performed between an SVG background image and other layers.
Attachments
Test case (2.16 KB, application/zip)
2013-06-13 05:38 PDT, Mirela
no flags
Patch for review (317.96 KB, patch)
2013-06-13 06:05 PDT, Mihai Tica
no flags
Patch (317.67 KB, patch)
2013-06-13 09:53 PDT, Mihai Tica
no flags
Mirela
Comment 1 2013-06-13 05:38:39 PDT
Created attachment 204575 [details] Test case
Mihai Tica
Comment 2 2013-06-13 06:05:25 PDT
Created attachment 204577 [details] Patch for review
Dirk Schulze
Comment 3 2013-06-13 07:46:33 PDT
Comment on attachment 204577 [details] Patch for review View in context: https://bugs.webkit.org/attachment.cgi?id=204577&action=review > Source/WebCore/svg/graphics/SVGImage.cpp:227 > + context->setCompositeOperation(compositeOp); Why does the composition operation needed to be reset? Why just the blend mode?
Mihai Tica
Comment 4 2013-06-13 08:57:31 PDT
(In reply to comment #3) > (From update of attachment 204577 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=204577&action=review > > > Source/WebCore/svg/graphics/SVGImage.cpp:227 > > + context->setCompositeOperation(compositeOp); > > Why does the composition operation needed to be reset? Why just the blend mode? Thanks for reviewing this change! This would actually reset the blend mode but it seems like it's no longer needed due to the consequent call to stateSaver.restore();
Mihai Tica
Comment 5 2013-06-13 09:53:50 PDT
Dirk Schulze
Comment 6 2013-06-13 10:55:37 PDT
Comment on attachment 204624 [details] Patch LGTM. Great catch!
WebKit Commit Bot
Comment 7 2013-06-13 11:25:22 PDT
Comment on attachment 204624 [details] Patch Clearing flags on attachment: 204624 Committed r151566: <http://trac.webkit.org/changeset/151566>
WebKit Commit Bot
Comment 8 2013-06-13 11:25:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.