[CSS Background Blending] Enable CSS Background blending for layers with SVGs.

Source/WebCore:

The change implies adding the blending parameter for SVGImage
https://bugs.webkit.org/show_bug.cgi?id=117588

Patch by Mihai Tica <mitica@adobe.com> on 2013-06-13
Reviewed by Dirk Schulze.

Tests: css3/compositing/background-blend-mode-image-svg.html
       css3/compositing/background-blend-mode-svg-color.html

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::draw):

LayoutTests:

Adding tests for SVGs over simple background colors and images blending with SVGs.
https://bugs.webkit.org/show_bug.cgi?id=117588

Patch by Mihai Tica <mitica@adobe.com> on 2013-06-13
Reviewed by Dirk Schulze.

* css3/compositing/background-blend-mode-image-svg-expected.txt: Added.
* css3/compositing/background-blend-mode-image-svg.html: Added.
* css3/compositing/background-blend-mode-svg-color-expected.txt: Added.
* css3/compositing/background-blend-mode-svg-color.html: Added.
* css3/compositing/resources/red-circle.svg: Added.
* platform/mac/css3/compositing/background-blend-mode-image-svg-expected.png: Added.
* platform/mac/css3/compositing/background-blend-mode-svg-color-expected.png: Added.

Canonical link: https://commits.webkit.org/135770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151566 268f45cc-cd09-0410-ab3c-d52691b4dbfc